--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Welcome to Shear Documentation
+
 theme:
   name: material
   features:
@@ -25,5 +26,23 @@ theme:
         name: Switch to light mode
       primary: teal
       accent: lime
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - admonition
+  - pymdownx.arithmatex:
+      generic: true
+  - footnotes
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.mark
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+
 copyright: |
   &copy; 2023 <a href="https://github.com/oslabs-beta/shear"  target="_blank" rel="noopener">Shear</a>
